# curvefit-estimator

./: .gitignore  .python-version  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.dev.txt  setup.py
.github/workflows/: CI.yaml
curvefit/: __init__.py  curvefit.py  estimator.py
curvefit_estimator/: __init__.py  estimator.py
tests/: test_common.py  test_curvefit.py  test_smoke.py
